All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <description>Symptom that was noted before the failure.</description>
    <inlineHelpText>Symptom that was noted before the failure.</inlineHelpText>
    <label>Symptom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample Value1</fullName>
            </value>
            <value>
                <fullName>Sample Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>