All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Time_to_Assign_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Assign_Bucket__c</fullName>
    <description>Time taken for the work order to be assigned bucket. Used for reporting purpose</description>
    <formula>IF ( TimeToAssign__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( TimeToAssign__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( TimeToAssign__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time taken for the work order to be assigned bucket. Used for reporting purpose</inlineHelpText>
    <label>Time to Assign Bucket</label>
    <type>Text</type>
</CustomField>