All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Time_To_Close_c__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Close_c__c</fullName>
    <formula>( Closed_On__c - CreatedDate )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>