All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Time_to_Restore__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Restore__c</fullName>
    <description>Time taken to restore as per commitment in SLA.</description>
    <inlineHelpText>Time taken to restore as per commitment in SLA.</inlineHelpText>
    <label>Time to Restore (in Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>