All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Time_to_Schedule_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Schedule_Bucket__c</fullName>
    <description>Time taken for the work order to be scheduled after it was opened bucket. Used for reporting purpose</description>
    <formula>IF (TimeToSchedule__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (TimeToSchedule__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (TimeToSchedule__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time taken for the work order to be scheduled after it was opened bucket. Used for reporting purpose</inlineHelpText>
    <label>Time to Schedule Bucket</label>
    <type>Text</type>
</CustomField>