All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/TimeBetweenAssignAndSchedule__c.field-meta.xml
<CustomField>
    <fullName>TimeBetweenAssignAndSchedule__c</fullName>
    <description>Calculates the time taken for the work order to be scheduled after it was assigned</description>
    <formula>( FirstScheduledDateTime__c - First_Assigned_DateTime__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the time taken for the work order to be scheduled after it was assigned</inlineHelpText>
    <label>Time Between Assign And Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>