All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/TimeBetweenQueueAndAssign__c.field-meta.xml
<CustomField>
    <fullName>TimeBetweenQueueAndAssign__c</fullName>
    <description>Indicates the amount of time it took for the work order to be assigned after being queued</description>
    <formula>( First_Assigned_DateTime__c - First_Queued_DateTime__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the amount of time it took for the work order to be assigned after being queued</inlineHelpText>
    <label>Time Between Queue And Assign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>