All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/TimeBetweenScheduleAndClose__c.field-meta.xml
<CustomField>
    <fullName>TimeBetweenScheduleAndClose__c</fullName>
    <description>Indicates the amount of time it took for the work order to be closed after being scheduled</description>
    <formula>( Closed_On__c - FirstScheduledDateTime__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the amount of time it took for the work order to be closed after being scheduled</inlineHelpText>
    <label>Time Between Schedule And Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>