All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/TimeToAssign__c.field-meta.xml
<CustomField>
    <fullName>TimeToAssign__c</fullName>
    <description>Indicates the amount of time it took for the work order to be assigned after being opened.</description>
    <formula>(First_Assigned_DateTime__c - CreatedDate )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the amount of time it took for the work order to be assigned after being opened.</inlineHelpText>
    <label>Time To Assign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>