All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/TimeToQueue__c.field-meta.xml
<CustomField>
    <fullName>TimeToQueue__c</fullName>
    <description>Indicates the amount of time it took for the work order to be queued after being created</description>
    <formula>(First_Queued_DateTime__c- CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the amount of time it took for the work order to be queued after being created</inlineHelpText>
    <label>Time To Queue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>