All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/TimeToSchedule__c.field-meta.xml
<CustomField>
    <fullName>TimeToSchedule__c</fullName>
    <description>Indicates the amount of time it took for the work order to be scheduled after being opened</description>
    <formula>( FirstScheduledDateTime__c - CreatedDate )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the amount of time it took for the work order to be scheduled after being opened</inlineHelpText>
    <label>Time To Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>