All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Amount__c</fullName>
    <description>Total Amount which is billed to the customer for the work performed.</description>
    <inlineHelpText>Total Amount which is billed to the customer for the work performed.</inlineHelpText>
    <label>Total Billable Amount</label>
    <summarizedField>Service_Order_Line__c.Total_Line_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Service_Order_Line__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Usage/Consumption</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Service_Order_Line__c.Is_Billable__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Order_Line__c.Service_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>