All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Total_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate__c</fullName>
    <description>Total Estimate cost of the work to be performed.</description>
    <inlineHelpText>Total Estimate cost of the work to be performed.</inlineHelpText>
    <label>Total Estimate</label>
    <summarizedField>Service_Order_Line__c.Total_Estimated_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Service_Order_Line__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Estimate</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Order_Line__c.Service_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>