All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Total_Work_Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Order_Cost__c</fullName>
    <description>Total cost of the work actual performed on the work order.</description>
    <inlineHelpText>Total cost of the work actual performed on the work order.</inlineHelpText>
    <label>Total Work Order Amount</label>
    <summarizedField>Service_Order_Line__c.Total_Line_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Service_Order_Line__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Usage/Consumption</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Order_Line__c.Service_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>