All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Travel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Travel_Rate__c</fullName>
    <description>Derived from Travel Policy</description>
    <label>Travel Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>