All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Time__c</fullName>
    <description>Turnaround time. Calculated automatically</description>
    <formula>IF ((Closed_On__c - CreatedDate) &lt;= 7, &quot;Less Than 8 days&quot;, 
IF ((Closed_On__c - CreatedDate) &lt;= 15, &quot;8 To 15 days&quot;, 
IF ((Closed_On__c - CreatedDate) &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turnaround Time</label>
    <type>Text</type>
</CustomField>