All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Violation_Message__c.field-meta.xml
<CustomField>
    <fullName>Violation_Message__c</fullName>
    <label>Violation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>