All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Violation_Status2__c.field-meta.xml
<CustomField>
    <fullName>Violation_Status2__c</fullName>
    <label>Violation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jeopardy</fullName>
            </value>
            <value>
                <fullName>Unresourced</fullName>
            </value>
            <value>
                <fullName>Constraint Violation</fullName>
            </value>
            <value>
                <fullName>Unscheduled - Bad Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>