All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Work_Order_Scheduling_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Scheduling_Status__c</fullName>
    <description>Indicates various stages of the workflow of scheduling the work order</description>
    <inlineHelpText>Indicates various stages of the workflow of scheduling the work order</inlineHelpText>
    <label>Scheduling Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>En Route</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Finished Onsite</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>