All_Component_DX/force-app/main/default/objects/Service_Order__c/listViews/All_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Type__c</columns>
    <columns>Company__c</columns>
    <columns>Product__c</columns>
    <columns>Site__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Order_Status__c</columns>
    <columns>Closed_On__c</columns>
    <columns>Preferred_Technician__c</columns>
    <columns>Group_Member__c</columns>
    <columns>City__c</columns>
    <columns>OptiMax_Status__c</columns>
    <columns>Scheduled_Date_Time__c</columns>
    <columns>Dispatch_Priority__c</columns>
    <columns>Billing_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
    <language>en_US</language>
</ListView>